k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: citricloud
  labels:
    app.kubernetes.io/name: citricloud
